scss/form-builder.scss
.react-form-builder {
  .react-form-builder-preview {
    background: #fafdff;
    padding: 10px;
    min-height: 750px;
    width: 100%;
    font-family: "Plus Jakarta Sans";
    .preview-page-break {
      padding: 5px 0;
      border-top: 2px dotted #ccc;
      border-bottom: 2px dotted #ccc;
      background: #eee;
      text-align: center;
      width: 100%;
      font-weight: bold;
      margin: 5px 0;
      background: repeating-linear-gradient(
        45deg,
        #fff,
        #fff 10px,
        #eee 10px,
        #eee 20px
      );
    }

    label {
      font-weight: 400;
      color: #374145;
      font-size: 14px;
    }

    .bold {
      font-weight: bold;
    }
    .italic {
      font-style: italic;
    }

    .no-image {
      background: #eee;
      width: 100px;
      height: 100px;
      border: 1px solid #ddd;
      text-align: center;
      padding-top: 35px;
    }

    .option-inline {
      display: inline-block !important;
      margin-right: 10px !important;
    }
    .form-label {
      display: block !important;
    }

    .edit-form {
      position: fixed;
      background: #fafafa;
      padding: 30px;
      border-left: 0;
      box-shadow: none;
      top: 0;
      left: -1000px;
      height: 100%;
      width: 715px;
      transition: 0.5s;
      overflow-y: auto;

      h4,
      .dismiss-edit {
        margin-bottom: 30px;
      }
      .dismiss-edit {
        cursor: pointer;
        margin-top: 10px;
        font-size: 125%;
      }
      textarea {
        width: 100%;
      }
      .form-group {
        .form-group-range {
          label {
            display: block;
          }
          input {
            display: inline-block;
            width: 21%;
            margin-left: 0;
            &:last-of-type {
              width: 78%;
              margin-left: 1%;
            }
            &:first-of-type {
              width: 21%;
              margin-left: 0;
            }
          }
        }
        .text-input {
          border-radius: 20px !important;
        }
      }
      .dynamic-option-list {
        margin-bottom: 15px;
        ul {
          list-style-type: none;
          margin: 0;
          padding: 0;
          li {
            margin-top: 10px;
            input {
              &.form-control {
                width: 84.26%;
                float: left;
                &[type="checkbox"] {
                  border: none;
                  box-shadow: none;
                  margin-top: 0;
                }
              }
              margin-right: 10px;
            }
            button {
              float: left;
              margin-right: 5px;
            }
            .dynamic-options-actions-buttons {
              margin-left: 20px;
            }
          }
        }
      }
    }
    .Sortable {
      transition: opacity 0.25s ease-in;
      position: relative;
      cursor: move;
      -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
      .rfb-item {
        border: 1px #b0eaff solid !important;
        padding-top: 0 !important;
        padding-right: 0 !important;
        padding-left: 0 !important;

        &.SortableItem {
          margin-bottom: 8px !important;
          & > :not(:first-child) {
            padding: 10px 20px 0;
          }
          position: relative;
          border-radius: 11px;
          .form-group {
            pointer-events: none;
            label,
            select,
            input,
            a {
              cursor: move;
            }
            .hyperlink {
              a {
                color: #b0eaff !important;
              }
            }
            input[type="date"] {
              height: 42px;
            }
            .react-star-rating {
              display: block;
            }
            .checkbox-label,
            .radio-label {
              font-weight: normal;
              display: block;
            }
            .label-required {
              margin-left: 5px;
            }
          }
          &.is-dragging {
            position: absolute;
            z-index: 1688;
            border: 2px #ccc solid !important;
            background: #fff;
            cursor: move;
            padding: 10px 20px;
          }
        }
        &.is-placeholder {
          display: block;
          z-index: auto;
          opacity: 0.4;
          border: 2px #ccc solid;
        }
        .toolbar-header {
          z-index: 100;
          position: relative;
          background-color: #fafdff;
          color: #13b9ff;
          font-weight: 600;
          display: flex;
          justify-content: space-between;
          align-items: center;
          border-radius: 10px;
          border-bottom-right-radius: 0;
          border-bottom-left-radius: 0;
          padding: 10px;
          .label {
            position: absolute;
            left: 20px;
          }
          .toolbar-header-buttons-container {
            display: flex;
            justify-content: space-between;
          }
          .toolbar-header-buttons {
            opacity: 0;
            position: absolute;
            right: 60px;
            margin-right: 10px;
          }
          &:hover {
            background-color: #8ae0ff;
            color: #004f6b;
            .toolbar-header-buttons {
              opacity: 1;
              position: absolute;
              right: 30px;
            }
            .dragSvg {
              svg {
                path {
                  fill: #004f6b;
                }
              }
            }
          }
        }
        &:hover {
          border: 1px #54d2ff solid !important;

          select,
          input {
            cursor: move;
            pointer-events: none;
            border-radius: 6px;
          }
          .toolbar-header {
            opacity: 1;
          }
        }
      }
    }
    .startAdd {
      color: #004f6b;
      font-size: 18px;
      font-weight: 500;
    }
    .buildForm {
      font-size: 14px;
      color: #cdd5d8;
      font-weight: 400;
    }
    &.is-editing {
      .edit-form {
        z-index: 2000;
        border-right: 1px solid #ddd;
        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
        left: 0;
        transition: 0.5s;
      }
    }
    .placeholder_text {
      font-family: "Plus Jakarta Sans";
      color: #33c9ff;
      font-size: 14px;
    }
  }

  .react-form-builder-toolbar {
    width: 100%;
    background: #fff;
    border-radius: 16px;
    margin-top: 16px;
    .toolbar-heading {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 10px 0;
    }
    h4 {
      margin-top: 0;
      text-align: center;
    }
    p {
      color: #004f6b;
      margin: 0 !important;
      font-weight: 500;
      font-family: "Plus Jakarta Sans";
    }
    .search_container {
      position: relative;
      display: inline-block;
      svg {
        position: absolute;
        left: 10px;
        top: 50%;
        transform: translateY(-50%);
        pointer-events: none;
      }
      input {
        border: 1px solid #eceff0;
        border-radius: 24px;
        padding: 6px 10px;
        outline: none;
        color: #6d828b;
        font-family: "Plus Jakarta Sans";
        font-size: 12px;
        padding-left: 30px;
        box-sizing: border-box;
      }
    }
    .form-group {
      padding: 10px;
      border: 1px solid #ddd;
    }
    ul {
      padding: 0;
      overflow-y: scroll;
      position: static !important;
      li {
        display: flex;
        justify-content: space-between;
        cursor: pointer;
        list-style: none;
        margin: 0 0px 5px;
        padding: 10px;
        border: 1px solid #eceff0;
        border-radius: 6px;
        color: #004f6b;
        font-family: "Plus Jakarta Sans";
        font-weight: 500;
        svg {
          margin: 0 10px 0 0px;
        }
        .dragHandle_li {
          svg {
            margin: 0;
          }
        }
      }
    }
  }
}

.image-upload-container {
  position: relative;
  .image-upload {
    position: relative;
    opacity: 0;
    z-index: 2;
    height: 50px;
  }

  .image-upload-control {
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 1;
  }
}

.image-upload-preview {
  border: 4px solid #fff;
  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
}

.file-upload-preview {
  border: 4px solid #fff;
  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
  padding: 5px;
}

.btn-image-clear {
  margin: 15px 0;
  padding: 15px;
}

.btn-file-upload-clear {
  margin: auto;
  padding: 10px;
}

@media (max-width: $screen-sm-min) {
  .react-form-builder {
    position: relative;

    .react-form-builder-preview {
      width: 100%;

      .edit-form {
        width: 100%;
        overflow: scroll;

        .btn {
          margin-top: 10px;
        }

        .dynamic-option-list ul li input.form-control {
          width: 100%;
        }
      }

      .Sortable .rfb-item .toolbar-header .toolbar-header-buttons {
        right: -15px;
        .btn {
          margin-right: 5px;
          border-radius: 50%;
          padding: 7px 0px 0 3px;
          width: 35px;
          height: 35px;
        }
      }
    }

    .react-form-builder-toolbar {
      h4 {
        padding: 10px;
        background: #7a0019;
        color: #fff;
      }

      width: 100%;
      z-index: 900;
      bottom: -320px;

      -webkit-transition: transform 0.5s;
      transition: transform 0.5s;

      -webkit-transform: translate(0, 0);
      transform: translate(0, 0);

      right: 0;
      border-top: 2px solid #ccc;

      ul {
        height: 300px;
        overflow-x: scroll;
      }
    }

    .active-toolbar {
      -webkit-transform: translate(0, -300px);
      transform: translate(0, -300px);
    }
  }

  .m-signature-pad {
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: auto;
    height: auto;
    min-width: 250px;
    min-height: 140px;
    margin: 0;
  }
}

.visible_marks {
  display: block;
  width: 100%;
  padding: 0 4px;
  label {
    text-align: center;
    display: inline-block;
    padding: 0;
    margin: 0;
    font-weight: normal;
    &:first-of-type {
      text-align: left;
    }
    &:last-of-type {
      text-align: right;
    }
  }
}

.m-signature-pad {
  font-size: 10px;
  width: auto;

  .m-signature-pad--body {
    width: auto;
    height: 200px;
    border: 1px solid #e8e8e8;
    background-color: #fff;
    height: 200px;
    border-radius: 4px;

    canvas {
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      border-radius: 4px;
      box-shadow: 0 0 5px rgba(0, 0, 0, 0.02) inset;
    }
  }

  .m-signature-pad--footer {
    position: relative;
    margin-top: 10px;
  }
}

.form-place-holder {
  border: 1px dashed #13b9ff;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 8px;
  padding: 25px;
  text-align: center;
  font: 20pt bold, "Vollkorn";
  color: #33c9ff;
  background-color: #fff;
}

.form-place-holder-hidden {
  min-height: 50px;
}
.shared-input {
  border-radius: 6px;
  color: #8fa0a7;
  font-size: 14px;
  font-family: "Plus Jakarta Sans";
  font-weight: 400;
}
.dropdown {
  padding-right: 10px !important;
}
.header {
  color: #374145;
  font-family: "Plus Jakarta Sans";
  font-size: 32px;
}

